Fix: Exact match between CPE with NA (-) update part in vulnerability and vulnerable_software should be possible
See https://github.com/DependencyTrack/dependency-track/pull/1929#issuecomment-1331223525

Signed-off-by: Alioune SY <sy_alioune@yahoo.fr>